--- a/digschol/index.qmd
+++ b/digschol/index.qmd
@@ -1,8 +1,8 @@
 ---
-title: "Digital scholarship"
+title: "Digital infrastructure"
 ---
 
-## Digital scholarship: concepts and code
+## Infrastructure for digital scholarship: concepts and code
 
 The digital scholarship presented here has an overall logic: there is a natural progression from citation, to successsive forms of textual manipulation and analysis, to applications of those concepts.
 
