--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -7,8 +7,7 @@ engine: julia
 Some projects I'm currently working on
 
 
-- a [digital Complutensian polyglot Bible](./digitalcomplutensian/)
-- "semantic editions": digital editions of texts with significant non-textual material
-
+- a [digital Complutensian polyglot Bible](https://neelsmith.quarto.pub/digitalcomplutensian)
+- "[semantic editions](https://neelsmith.quarto.pub/semanticeditions/)": digital editions of texts with significant non-textual material
 - the Homer Multitext project
 
