--- a/updates.qmd
+++ b/updates.qmd
@@ -9,3 +9,7 @@ listing:
 ---
 
 News about releases and updates to documentation of Julia packages.
+
+:::{.callout-tip title="RSS feed"}
+https://neelsmith.quarto.pub/updates.xml
+:::
