--- a/updates/2024-10-24-updates-rss-feed/index.qmd
+++ b/updates/2024-10-24-updates-rss-feed/index.qmd
@@ -23,6 +23,6 @@ The URL for the feed is [https://neelsmith.quarto.pub/updates.xml](https://neels
 
 ## Back to the future
 
-I used RSS feeds 15-20 years ago, but like a lot of other people, I thought RSS had died. It's proven to be too simple and useful to go away altogether, however, and seems like a particularly good fit for following irregular announcments about changes to code and documentation.
+I used RSS feeds 15-20 years ago, but like a lot of other people, I thought RSS had died. It's proven to be too simple and useful to go away altogether, however, and seems like a particularly good fit for following irregular announcements about changes to code and documentation.
 
 I hope it also proves to be a practical way to follow news while [avoiding some of the worst features of social media](https://hvandenbergh.medium.com/back-to-rss-e4e177314bc3#:~:text=However%20RSS%20never%20died.,and%20some%20simple%20and%20straightforward.)
