--- a/posts.qmd
+++ b/posts.qmd
@@ -5,10 +5,12 @@ listing:
   type: grid # or `default` or `table`; each type has its own set of yaml options to include
   sort: "date desc" # can also sort on more than one field
   categories: true # allows you to sort posts by assigned categories 
-  feed: true  
+  feed: true 
+
+ 
 ---
 
 
-:::{.callout-tip title="RSS feed"}
-https://neelsmith.quarto.pub/posts.xml
+:::{.rsstag}
+[RSS](https://neelsmith.quarto.pub/posts.xml)
 :::
