--- a/updates.qmd
+++ b/updates.qmd
@@ -8,8 +8,9 @@ listing:
   feed: true
 ---
 
-News about releases and updates to documentation of Julia packages.
 
-:::{.callout-tip title="RSS feed"}
-https://neelsmith.quarto.pub/updates.xml
+:::{.rsstag}
+[RSS](https://neelsmith.quarto.pub/updates.xml)
 :::
+
+News about releases and updates to documentation of Julia packages.
