--- a/updates.qmd
+++ b/updates.qmd
@@ -10,7 +10,7 @@ listing:
 
 
 :::{.rsstag}
-[RSS feed](https://neelsmith.quarto.pub/updates.xml)
+[<i class="bi bi-rss"></i> RSS feed](https://neelsmith.quarto.pub/updates.xml)
 :::
 
 News about releases and updates to documentation of Julia packages.
