--- a/updates/2024-11-13-open-scriptures-hebrew/index.qmd
+++ b/updates/2024-11-13-open-scriptures-hebrew/index.qmd
@@ -7,7 +7,7 @@ author:
 date: 2024-11-13
 categories: [morphology, hebrew, new release] # self-defined categories
 image: ../new-package.png
-draft: true
+draft: false
 
 ---
 
